--- a/gb/19/8/13/n11450331.md
+++ b/gb/19/8/13/n11450331.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/a2882/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/a2882/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/a2882/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/a2882/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/a2882/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/a2882/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/a2882/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/a2882/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/a2882/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/a2882/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/a2882/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/a2882/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/a2882/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>内幕：为何中共生物制药业对美构成威胁</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/000_1316F8-600x400.jpg" />
 <h6> ITIF日前发布重磅报告，警告美国政府尽快应对中共对生物制药领域的威胁。图为示意图。(JEAN-PHILIPPE KSIAZEK / AFP)
 </h6>
 <hr>
-	<p>【大纪元2019年08月13日讯】（大纪元记者张婷综合报导）“中国（中共）是一个重大的潜在威胁，实际的威胁。”华盛顿智库“信息技术与创新基金会”（ITIF）日前发布重磅报告说。报告阐明中共对<ahref="https://github.com/a2882/djy/blob/master/gb/tag/%E7%94%9F%E7%89%A9%E5%88%B6%E8%8D%AF.md#1">生物制药</a>行业的高度重视，以及中共如何通过各种不良手段来推动这一行业的发展。</p>
-<p>报告提醒，川普（特朗普）政府在贸易谈判中不光要重视芯片领域，也要解决中共在<ahref="https://github.com/a2882/djy/blob/master/gb/tag/%E7%94%9F%E7%89%A9%E5%88%B6%E8%8D%AF.md#1">生物制药</a>方面的盗窃知识产权等不良行为。报告认为，这些问题若不尽早解决，等到看到美国生物制药行业出现公司关闭、美国工人失业（正如某些制造业出现的情况一样），那时就已为时太晚。</p>
+	<p>【大纪元2019年08月13日讯】（大纪元记者张婷综合报导）“中国（中共）是一个重大的潜在威胁，实际的威胁。”华盛顿智库“信息技术与创新基金会”（ITIF）日前发布重磅报告说。报告阐明中共对<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%94%9F%E7%89%A9%E5%88%B6%E8%8D%AF.md#1">生物制药</a>行业的高度重视，以及中共如何通过各种不良手段来推动这一行业的发展。</p>
+<p>报告提醒，川普（特朗普）政府在贸易谈判中不光要重视芯片领域，也要解决中共在<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%94%9F%E7%89%A9%E5%88%B6%E8%8D%AF.md#1">生物制药</a>方面的盗窃知识产权等不良行为。报告认为，这些问题若不尽早解决，等到看到美国生物制药行业出现公司关闭、美国工人失业（正如某些制造业出现的情况一样），那时就已为时太晚。</p>
 <h2>中共在多个计划中重点提出发展生物制药产业</h2>
-<p>ITIF报告称，十多年来，中共政府一直将生物制药作为重点发展产业。中共第十二个五年计划确定了7个优先战略新兴产业，包括生物技术。其最新的第十三个五年计划（2015～2020）继续关注该行业，并设定到2020年，生物技术产业产值要超过GDP的4%。中共国务院还要求各级政府对这一产业给予大力支持。中共在其“<ahref="https://github.com/a2882/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A02025.md#1">中国制造2025</a>”中确定了10个重点行业，其中也包括生物医药及高性能医疗器械。</p>
-<p>报告称，生物制药行业是美国竞争力和良好就业的关键驱动因素。然而，随着中共全面实施“<ahref="https://github.com/a2882/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A02025.md#1">中国制造2025</a>年”战略，对美国先进和创新型产业的挑战将越来越大。与包括美国在内的许多国家相比，中国（中共）采取了不同的方法来发展其生物制药行业。</p>
+<p>ITIF报告称，十多年来，中共政府一直将生物制药作为重点发展产业。中共第十二个五年计划确定了7个优先战略新兴产业，包括生物技术。其最新的第十三个五年计划（2015～2020）继续关注该行业，并设定到2020年，生物技术产业产值要超过GDP的4%。中共国务院还要求各级政府对这一产业给予大力支持。中共在其“<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A02025.md#1">中国制造2025</a>”中确定了10个重点行业，其中也包括生物医药及高性能医疗器械。</p>
+<p>报告称，生物制药行业是美国竞争力和良好就业的关键驱动因素。然而，随着中共全面实施“<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A02025.md#1">中国制造2025</a>年”战略，对美国先进和创新型产业的挑战将越来越大。与包括美国在内的许多国家相比，中国（中共）采取了不同的方法来发展其生物制药行业。</p>
 <p>报告称，中共的许多政策既不公平也不合法，因为其本质上是在实施“创新重商主义”，以牺牲美国和其它外国公司的利益为代价，不公平地使中国公司受益。换句话说，中共正在寻求在附加值最高、创新密集型的产业之一，即生物制药产业，来挑战美国。</p>
 <h2>中共发展生物制药的各种手段</h2>
 <p>中国近十年来在生物制药产业缩短了与美国的距离。但报告强调，中共政府通过强有力的，往往是歧视性的国家主导产业和贸易政策来支持实现这一切。</p>
@@ -24,12 +24,12 @@
 <p>NIH院长弗朗西斯·柯林斯（Francis Collins）去年在给大学机构的一封信中写到，NIH意识到一些外国实体机构建立了系统的项目，影响NIH的研究者和同行评审。</p>
 <p>ITIF报告还提到，中共的“千人计划”就是这样一个项目。</p>
 <p>NIH在去年12月的一份报告中特别聚焦中共在海外招聘人才的“千人计划”。报告称，一小部分在美国的外国研究人员一边领着美国政府资金，一边将美国的知识产权转移到他们各自的国家，使得全美各地的学术机构成为受害者。</p>
-<figure id="attachment_11450397" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/Screen-Shot-2018-12-15-at-16.09.47-600x400.png"><img class="size-large wp-image-11450397" src="https://i.epochtimes.com/assets/uploads/2019/08/Screen-Shot-2018-12-15-at-16.09.47-600x400-600x400.png" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">NIH去年发布报告，重点聚焦中共的“千人计划”。（NIH网站报告截图）</figcaption></figure>
+<figure id="attachment_11450397" aria-describedby="caption-attachment-11450397" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/Screen-Shot-2018-12-15-at-16.09.47-600x400.png"><img class="size-large wp-image-11450397" src="https://i.epochtimes.com/assets/uploads/2019/08/Screen-Shot-2018-12-15-at-16.09.47-600x400-600x400.png" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11450397" class="wp-caption-text">NIH去年发布报告，重点聚焦中共的“千人计划”。（NIH网站报告截图）</figcaption></figure>
 <p>中共通过“千人计划”来吸引在海外接受教育的华裔科学家和工程师回国进行研究。在2012至2018年，估计有25万华裔生命科学家回国。</p>
 <p>近年来，在美国发生了多起“千人计划”入选者参与盗窃美国知识产权的案例，已经引发美国联邦调查局的关注。</p>
 <p>中共还通过对美国生物医药公司进行网络攻击，来获取商业机密。有些时候，盗窃通过直接手段，中共招聘在美国生物制药公司工作的科学家窃取知识产权，并将其转移到中国去。</p>
 <p>2002年，一名中国公民被指控从康奈尔大学偷窃生物材料带到中国。2013年，两名曾在礼来公司（Eli Lilly）担任科学家的中国公民被指控偷窃和提供商业机密给一家中国制药公司。2018年，在葛兰素史克（GlaxoSmithKline）公司位于费城的一个研究所工作的顶尖华裔生物学家薛宇（音译，Yu Xue）承认窃取公司机密和将它们发送到竞争对手公司Renopharma，这是一家部分由中共政府资助的中国生物技术公司.</p>
-<figure id="attachment_11450683" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/GlaxoSmithKline_headquaters_-Brentford_London_England-2Oct2011-e1565700517891.jpg"><img class="size-large wp-image-11450683" src="https://i.epochtimes.com/assets/uploads/2019/08/GlaxoSmithKline_headquaters_-Brentford_London_England-2Oct2011-600x299.jpg" alt="" width="600" b="299" /></a><figcaption class="wp-caption-text">图为葛兰素史克在伦敦的大楼。(Maxwell Hamilton/Wikimedia commons)</figcaption></figure>
+<figure id="attachment_11450683" aria-describedby="caption-attachment-11450683" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/GlaxoSmithKline_headquaters_-Brentford_London_England-2Oct2011-e1565700517891.jpg"><img class="size-large wp-image-11450683" src="https://i.epochtimes.com/assets/uploads/2019/08/GlaxoSmithKline_headquaters_-Brentford_London_England-2Oct2011-600x299.jpg" alt="" width="600" b="299" /></a><figcaption id="caption-attachment-11450683" class="wp-caption-text">图为葛兰素史克在伦敦的大楼。(Maxwell Hamilton/Wikimedia commons)</figcaption></figure>
 <p>2019年，德州大学安德森癌症中心（MD Anderson Cancer Center）和埃默里大学（ Emory University）都因知识产权盗窃而解雇了几名华裔科学家。一份给美国国会下属的美中经济和安全审查委员会（USCC）的报告显示，“Ventria Bioscience、葛兰素史克、美国陶氏益农（Dow AgroSciences LLC）、嘉吉公司（Cargill Inc）、罗氏诊断（Roche Diagnostics）和安进（Amgen）都经历过现任或前任员工盗窃商业秘密或生物材料的行为。盗窃意图是将其出售给中国竞争对手。在学术界，研究人员从康奈尔大学、哈佛大学和加州大学戴维斯分校的雇主那里窃取了信息或样本，然后出售给中国公司。”</p>
 <p>在另一起案子中，一名前加州生技企业“基因泰克”（Genentech）雇员被指控商业秘密盗窃罪。该雇员将盗窃来的关键资讯传给基因泰克的中国竞争对手。</p>
 <p>一家领先的医疗器械公司的一名前中国员工被判窃取知识产权罪。该雇员在盗窃后，前往中国，并从中共政府那里获取融资，利用偷来的知识产权建立一家竞争对手公司。</p>
@@ -52,36 +52,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/19/3/16/n11117320.md#1">内幕：中共四大部门搞间谍活动 窃美机密</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/19/4/23/n11208582.md#1">历时3年调查 美癌症中心开除三教授始末</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/13/n12026823.md#1">中领馆给美国州议长发私信求表扬 被骂脑残</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/12/n12023838.md#1">疫情过后 白宫专家：溯源调查中共错误信息</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/3/16/n11117320.md#1">内幕：中共四大部门搞间谍活动 窃美机密</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/4/23/n11208582.md#1">历时3年调查 美癌症中心开除三教授始末</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/3/2/n13617083.md#1">美对俄罗斯推出新一轮制裁 炼油业入列</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/3/2/n13617156.md#1">传北京要求俄将入侵乌克兰推到奥运会后进行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/a2882/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/12/n12024410.md#1">中共肺炎在台湾“零复阳” 张上淳推估一原因</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/11/n12023271.md#1">否认台湾曾警示病毒人传人 谭德塞遭艺人呛爆</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/12/n12024074.md#1">副省长坐镇 火化28岁还有体温的她</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/11/n12022317.md#1">台男居家隔离结束约1周后确诊 期间曾购物上班</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/11/n12023116.md#1">国际追责中共 党媒罕见预警被指倒打一耙</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/10/n12020211.md#1">谭德塞批遭台湾人歧视 在台非裔艺人吐公道话</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/12/n12023872.md#1">澳洲小狗故意贴地走路 嘲弄腿短的同伴</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/10/n12020465.md#1">大陆公司高管涉性侵养女 章子怡谴责官商勾结</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/10/n12020808.md#1">港女星滞留武汉76天 解封后带狗狗直奔医院</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/11/n12022437.md#1">全昭旻休养中感谢各界祝福：既温暖又感激</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/11/n12023098.md#1">曾于地府做冥判 清末民初奇人讲述幽冥见闻</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/12/n12023749.md#1">民调：近半美国人认为 这波疫情是神的警示</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/1/n11993780.md#1">【命理】古今实例 不好的命是怎样形成的？</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/11/n12021870.md#1">疫情下小孩想上餐厅 这对夫妻以妙招回应</a></li>
-<li><a href="https://github.com/a2882/djy/blob/master/gb/20/4/12/n12024552.md#1">古今传奇：天门为何人开启</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/a2882/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/a2882/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/13/n11450331.htm">内幕：为何中共生物制药业对美构成威胁</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/13/n11450331.htm">内幕：为何中共生物制药业对美构成威胁</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/a2882/djy/blob/master/gb/19/8/13/n11450331.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/a2882/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/a2882/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/a2882/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/a2882/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/a2882/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/19/8/13/n11450331.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
